Added current location markers and links in infoboxes on map views. Added animation for user guidance to use filters at first use.

--- a/src/main/webapp/resources/css/clujsolver.css
+++ b/src/main/webapp/resources/css/clujsolver.css
@@ -152,6 +152,10 @@
     margin: auto;
 }
 
+.tap-target {
+    background-color: #ffb300 !important;
+}
+
 
 .search-details{
     margin-right: 40px;
