Add new problem functionality and updates to the New Problem and CityOverview views

--- a/src/main/webapp/resources/css/clujsolver.css
+++ b/src/main/webapp/resources/css/clujsolver.css
@@ -223,3 +223,16 @@
 .listing-arrow{
     margin-right: 20px;
 }
+
+.info-markers{
+    margin: auto;
+    width: 540px;
+}
+
+.map-signal-problem{
+    padding: 0 !important;
+}
+
+.address-signal-problem{
+    margin-left: 35px !important;
+}
