added controls for recurrent problems view

--- a/src/main/webapp/resources/css/clujsolver.css
+++ b/src/main/webapp/resources/css/clujsolver.css
@@ -236,3 +236,8 @@
 .address-signal-problem{
     margin-left: 35px !important;
 }
+
+input#test5{
+	opacity: inherit;
+	pointer-events: visible;
+}
