Added validators on the Login, Register and AddProblem pages. Added the a first-login page after registration to complete the registration workflow.

--- a/src/main/webapp/resources/css/clujsolver.css
+++ b/src/main/webapp/resources/css/clujsolver.css
@@ -236,3 +236,12 @@
 .address-signal-problem{
     margin-left: 35px !important;
 }
+.logout-drop{
+    margin-top: 65px;
+}
+
+.error-message{
+    color: darkred;
+    margin-left: 10px;
+
+}
